# restaurant-menu-match

./: .gitignore  README.md  pyproject.toml
restaurant_menu_match/notebooks/: restaurant.ipynb
